--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-game-engine": "^1.2.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
