--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "typescript": "^4.9.4",
     "react-native-web": "~0.18.10",
     "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "@expo/webpack-config": "^18.0.1",
+    "expo-image": "~1.0.1",
+    "expo-asset": "~8.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
