--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@types/react": "~18.0.27",
     "expo": "~48.0.18",
+    "expo-asset": "~8.9.1",
+    "expo-image": "~1.0.1",
     "expo-sensors": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-game-engine": "^1.2.0",
-    "typescript": "^4.9.4",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1",
-    "expo-image": "~1.0.1",
-    "expo-asset": "~8.9.1"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
